# offsec-journal

./: .dockerignore  .env.example  .gitignore  BUGS.md  CHANGELOG.md  Dockerfile  MANUAL_TESTS.md  Makefile  OPEN_QUESTIONS.md  OffSec Journal Prompt.md  PLAN.md  README.md  ROADMAP.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
api/: __init__.py  auth.py  cli.py  config.py  main.py
api/core/: coherence.py  db.py  journal.py  notes.py  queries.py  sync.py  yaml_io.py
api/models/: __init__.py  assignment.py  availability.py  client.py  journal.py  note.py  office.py  person.py  project.py  skill.py
api/routes/: admin.py  auth.py  bootstrap.py  clients.py  coherence.py  geo.py  health.py  heatmap.py  journal.py  notes.py  offices.py  people.py  projects.py  search.py  skill_gap.py  skills.py
api/security/: __init__.py  audit.py  authelia.py  rate_limit.py
data/: assignments.yaml  availability.yaml  offices.yaml  people.yaml  teams.yaml
data/infosec/: assignments.yaml  (+4 more)
design-fetch/: design.tar
scripts/: coverage_round2.py  exercise_journal.py  seed_demo.py
tests/: conftest.py  test_admin_endpoints.py  test_admin_ui_endpoints.py  test_audit_regressions.py  test_authelia_middleware.py  test_bootstrap.py  test_cli.py  test_coherence.py  test_endpoints.py  test_handlers_all.py  test_heatmap.py  test_journal_apply.py  test_notes_and_search.py  test_rate_limit_and_reactivation.py  test_rollback.py  test_search_filters.py  test_sync.py  test_team_isolation.py
web/: README.md  api.js  app.js  data.js  index.html  styles.css  wrangler.jsonc
(+32 files in other folders)
